...

            LaunchedEffect(listState.firstVisibleItemIndex) {
                val currentItem = state.filteredData.getOrNull(listState.firstVisibleItemIndex)
                currentItem?.let { visibleVehicleInfoEntity.value = it }
            }

            Box(Modifier.fillMaxSize().testTag("map")) {
                GoogleMap(
                    modifier = Modifier.matchParentSize(),
                    cameraPositionState = cameraPositionState,
                    uiSettings = MapUiSettings(zoomControlsEnabled = false),
                    onMapLoaded = { isMapInitialized.value = true}
                ) {
...
